--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@storybook-ts-issue/otherlib": ["libs/otherlib/src/index.ts"],
+      "@storybook-ts-issue/storybook": ["libs/storybook/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
