--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "build-storybook": "nx run storybook:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +43,7 @@
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
     "babel-loader": "8.1.0",
+    "chromatic": "^6.4.3",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.25.2",
